--- a/hw1.html
+++ b/hw1.html
@@ -1,4 +1,4 @@
-<h1>HEAD TEXT</h1>
-<h2>SUBHEAD TEXT</h2>
-<p>Intro yourself</p>
-<!-- image -->
+<h1>Welcome!</h1>
+<h2>This is my webpage</h2>
+<p>Hello! My name is Aziza, and I am a sophomore student at AUCA from the Software Engineering department.</p>
+<img scr="img.png" alt="Aziza">
