Changed the link to the photo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             helping others," - Audrey Hepburn </p>
     </div>
     <div id="about">
-        <img src="https://imgur.com/a/iFw54PJ.jpg" alt="Aziza photo">
+        <img scr="https://imgur.com/GNubi18.jpg" alt="Aziza">
         <p>I am a person who values new connections and interactions. Apart from my current focus in the IT industry, I
             have a diverse range of interests and passions. Hence, I am always looking for new opportunities to explore
             and pursue these interests. Here are some fun facts about me:</p>
@@ -42,7 +42,8 @@
         </ol>
     </div>
     <div id="wish">
-        <p>I envision becoming a software engineer who challenges conventional thought and discovers the advancements in current and future technologies. I am excited to see where my passions will take me in the future!</p>
+        <p>I envision becoming a software engineer who challenges conventional thought and discovers the advancements in
+            current and future technologies. I am excited to see where my passions will take me in the future!</p>
     </div>
 </body>
 
