--- a/hw1.html
+++ b/hw1.html
@@ -1,4 +1,5 @@
 <h1>Welcome!</h1>
 <h2>This is my webpage</h2>
 <p>Hello! My name is Aziza. I am a sophomore student at AUCA from the Software Engineering department.</p>
-<img scr="https://imgur.com/GNubi18.jpg" alt="Aziza">
+<img src="https://imgur.com/GNubi18.jpg" alt="Aziza">
+
