--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             helping others," - Audrey Hepburn </p>
     </div>
     <div id="about">
-        <img scr="https://imgur.com/GNubi18.jpg" alt="Aziza">
+        <img src="https://imgur.com/GNubi18.jpg" alt="Aziza">
         <p>I am a person who values new connections and interactions. Apart from my current focus in the IT industry, I
             have a diverse range of interests and passions. Hence, I am always looking for new opportunities to explore
             and pursue these interests. Here are some fun facts about me:</p>
