add style to personal page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aziza's Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -20,10 +21,15 @@
     </div>
     <div id="about">
         <img src="https://imgur.com/GNubi18.jpg" alt="Aziza">
-        <p>I am a person who values new connections and interactions. Apart from my current focus in the IT industry, I
+        <div>
+            <h3>ABOUT</h3>
+            <p>I am a person who values new connections and interactions. Apart from my current focus in the IT industry, I
             have a diverse range of interests and passions. Hence, I am always looking for new opportunities to explore
             and pursue these interests. Here are some fun facts about me:</p>
+        </div>
     </div>
+
+    <h3>Favorites</h3>
     <div id="fav">
         <ol>
             <li>Fetuccine Alfredo</li>
@@ -42,6 +48,7 @@
         </ol>
     </div>
     <div id="wish">
+        <h3>Wishes</h3>
         <p>I envision becoming a software engineer who challenges conventional thought and discovers the advancements in
             current and future technologies. I am excited to see where my passions will take me in the future!</p>
     </div>
