made changes in style

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Welcome to my website!</h1>
     </div>
     <div id="title">
-        <h2>Hi dear! My name is Aziza. I am a rising sophomore student pursuing a bachelor's degree of Software
+        <h2>Hi! My name is Aziza. I am a rising sophomore student pursuing a bachelor's degree of Software
             Engineering at AUCA.</h2>
         <p>"As you grow older, you will discover that you have two hands, one for helping yourself, the other for
             helping others," - Audrey Hepburn </p>
@@ -45,12 +45,11 @@
             <li>Interstellar</li>
             <li>La La Land</li>
             <li>Grand Budapest Hotel</li>
-        </ol>
+        </ol> 
     </div>
     <div id="wish">
         <h3>Wishes</h3>
-        <p>I envision becoming a software engineer who challenges conventional thought and discovers the advancements in
-            current and future technologies. I am excited to see where my passions will take me in the future!</p>
+        <p>WISHES</p>
     </div>
 </body>
 
