--- a/grid2.html
+++ b/grid2.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 7</title>
-    <link rel="stylesheet" href="hw7.css">
+    <link rel="stylesheet" href="grid2.css">
 </head>
 
 <body>
