--- a/grid2.html
+++ b/grid2.html
@@ -1,33 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment 7</title>
-    <link rel="stylesheet" href="grid2.css">
+    <title>Assignment 6</title>
+    <link rel="stylesheet" href="grid2.css">   
 </head>
-
 <body>
-    <img src='https://cdn.imgchest.com/files/wye3cdnxp4b.png' style='position: absolute; top:0; left:0;z-index:-1'>
+    <img src='https://cdn.imgchest.com/files/wye3cdnxp4b.png' style='position: absolute;
+    top:0; left:0;z-index:-1'>
+    
     <div class="container">
         <div class="box1">1</div>
         <div class="box2">2</div>
         <div class="box3">3</div>
         <div class="box4">4</div>
         <div class="box5">5</div>
-        <div class="box6">6
+        <div class="box6">
             <ul>
                 <li class="rating">Rating</li>
                 <li class="join">Join</li>
-                <li class="profile">profile</li>
-                <li class="search">search</li>
-                <li class="menu">MENU</li>
-                <li class="arrow">arr</li>
+                <li class="user"><a href="#">
+                    <div class="iconInHeader"><span class="user"></span></div>
+                </a></li>
+                
+                <li class="searching">
+                    <div class="iconInHeader">
+                        <a href="#"><span class="search"></span></a>
+                    </div>
+                </li>
+                <li class="menu"><div class="iconInHeader">
+                    <span class="boldmenu">MENU</span>
+                </div>
+                </li>
+                <li class="arrow"><div class="iconInHeader">
+                    <span class="doubleArrowDown"></span>
+                </div>
+                </li>
             </ul>
         </div>
         <div class="box7">7</div>
     </div>
 </body>
 </html>
+
