--- a/grid4.html
+++ b/grid4.html
@@ -14,7 +14,7 @@
 
         <div class="container">
         <div class="Logo">1
-            <img src="https://cdn.imgchest.com/files/wye3cdnxp4b.png" alt="who.ca-news">
+            <img src="https://translate.google.com/translate?sl=auto&tl=en&hl=en-US&u=https://who.ca-news.org&client=webapp.svg" alt="who.ca-news">
         </div>
         <div class="Hero">
             <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h1>
