--- a/grid2.html
+++ b/grid2.html
@@ -12,12 +12,12 @@
     top:0; left:0;z-index:-1'>
 
     <div class="container">
-        <div class="box1">1</div>
-        <div class="box2">2</div>
-        <div class="box3">3</div>
-        <div class="box4">4</div>
+        <div class="Logo">1</div>
+        <div class="Hero">2</div>
+        <div class="FlexBoxLayout1">3</div>
+        <div class="LeftSideBar">4</div>
         <div class="box5">5</div>
-        <div class="box6">
+        <div class="Menu">
             <ul>
                 <li class="rating">Rating</li>
                 <li class="join">Join</li>
@@ -42,7 +42,7 @@
         </div>
         
         
-        <div class="box7">7</div>
+        <div class="FlexBoxLayout2">7</div>
     </div>
 </body>
 </html>
