--- a/grid5.html
+++ b/grid5.html
@@ -16,7 +16,7 @@
 
     <div class="container">
         <div class="Logo">1
-            <img src="https://translate.google.com/translate?sl=auto&tl=en&hl=en-US&u=https://who.ca-news.org&client=webapp"
+            <img src="https://cdn.imgchest.com/files/wye3cdnxp4b.png"
                 alt="who.ca-news">
         </div>
         <div class="Hero">
