changes made to css link

--- a/grid5.html
+++ b/grid5.html
@@ -63,10 +63,10 @@
     <script>
         function switchStyle() {
             let style = document.querySelector('.style');
-            if (style.getAttribute('href') == 'grid4.css') {
-                style.setAttribute('href', 'grid2.css');
+            if (style.getAttribute('href') == 'grid5.css') {
+                style.setAttribute('href', 'grid2b.css');
             } else {
-                style.setAttribute('href', 'grid4.css');
+                style.setAttribute('href', 'grid5.css');
             }
         }
     </script>
