--- a/grid5.html
+++ b/grid5.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 9</title>
-    <!-- <link rel="stylesheet" class="style" href="grid5.css"> -->
+    <link rel="stylesheet" class="style" href="grid5.css">
     <link rel="stylesheet" class="style" href="grid2b.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 </head>
